# CppExercise

./: .gitignore  CMakeLists.txt  README.md
BinaryOperations/: CMakeLists.txt  README.md
BinaryOperations/include/: bits.hpp
BinaryOperations/src/: bits.cpp
BinaryOperations/tests/: bits_tests.cpp
HamArc_HW0/: README.md
HamArc_HW0/copyfile/: CMakeLists.txt  README.md
HamArc_HW0/copyfile/include/: copy.hpp
HamArc_HW0/copyfile/src/: main.cpp
HamArc_HW0/toyarc/: CMakeLists.txt  README.md
HamArc_HW0/toyarc/include/: args.hpp
HamArc_HW0/toyarc/src/: main.cpp
